
    * The following modules have been removed from BioPerl-Run to be
      part of separate distributions and have independent development:

          Bio::Tools::Phylo::Gumby
          Bio::Tools::Run::AssemblerBase
          Bio::Tools::Run::BWA
          Bio::Tools::Run::BWA::Config
          Bio::Tools::Run::Cap3
          Bio::Tools::Run::Meme
          Bio::Tools::Run::Phylo::Gumby

    * New program previously part of the BioPerl distribution:

          bp_blast2tree


1.7.2

* Minor release - PAML, Clustalw, and TCoffee related modules are all
  separate distributions, one for each set.  These are Bio-Tools-Phylo-PAML,
  Bio-Tools-Run-Alignment-TCoffee and Bio-Tools-Run-Alignment-Clustalw
  [carandraug]
* Fix EMBOSS and SABlastPlus test count, which was failing when EMBOSS wasn't installed [cjfields]
* Fix various tests to skip if Bio::FeatureIO isn't installed [cjfields]
* Various documentation fixes, including INSTALL updates [bosborne]
* Add Bio::FeatureIO as a 'recommends' (needed for Gumby, MCS, Match, Phastcons)

1.7.001

* Minor release to deal with version indexing

1.7.000

* Bio::Tools::Run::WrapperBase moved from bioperl core to bioperl-run
* Updaed Samtools wrapper, minimal support for samtools > v.1 added [cjfields]
* Minor updates to sync with BioPerl v. 1.7.x release series

1.6.901

* added run support for MSAProbs [Jessen Bredeson]


1.6.900

* Bowtie and BWA wrappers for NGS [maj, Ben Bimber, Dan Kortschak]
* ClustalW v2 support [cjfields]
* tRNAscanSE support [Mark Johnson, cjfields]
* Glimmer v2 updates [Mark Johnson, cjfields]
* PAML codeml wrapper updated to work with PAML 4.4d [DaveMessina]
* Phyml updates [hyphaltip]
* Repeatmasker updates [cjfields]
* Initial BLAST+ modules (Bio::Tools::Run::BlastPlus/StandAloneBlastPlus) [maj]
* Improved Bio::Tools::Run::AssemblerBase module and update of the wrappers
  that use it [fangly, maj]
* Support for running new de novo and comparative assemblers: 454 Newbler